:bug: Fix overlapping of the first article link by the walking man

--- a/components/WalkingMan/WalkingMan.module.scss
+++ b/components/WalkingMan/WalkingMan.module.scss
@@ -1,7 +1,7 @@
 .walkingMan {
   position: fixed;
   z-index: 1;
-  top: 3rem;
+  top: 2.5rem;
   right: 0;
   left: 0;
   width: 100%;
